build 16 - jun/07/2021
 - pip-21.1.2
 - pylint-2.8.3
 - astroid-2.5.6
 - youtube_dl-2021.6.6
 - sanic-21.3.4
 - pyinstaller-4.3
       
build 15 - apr/06/2021
 - NEW: --server mode, run teluride as an RPC web server
 - python: pylint-2.7.4
 - python: youtube_dl-2021.4.7
 - python: astroid-2.5.2
 - python: sanic-21.3.2
 - python: sanic_routing-0.5.2    
 - python: httptools-0.1.1
 - python: ujson-4.0.2
 - python: uvloop-0.15.2
 - python: websockets-8.1
 - python: aiofiles-0.6.0
 - python: multidict-5.1.0

build 12 - mar/14/2021
 - python: youtube-dl-2021.3.14

build 11 - mar/03/2021
 - python: youtube-dl 2021.3.3
 - python: pylint 2.7.2

build 10 - feb/10/2021
 - python: pip-21.0.1
 - python: youtube-dl 2021.2.10
 - python: pycryptodome 3.10.1

build 9 - jan/14/2021
 - python: pyinstaller 4.2
 - python: youtube-dl 2021.1.8
 - python: pycryptodome 3.9.9

build 8 - dec/28/2020
 - python: pip-20.3.3
 - python: youtube-dl 2020.12.29
 - macos binary comes signed and notarized with hardened runtime

build 7 - dec/8/2020
 - python: pip-20.3.1
 - python: youtube-dl 2020.12.7
 - false positive AV warning caused by PyInstaller fixed

build 6 - nov/18/2020
 - python: youtube-dl 2020.11.18
 - python: pyinstaller 4.0
 - Smaller build, down 2.4MB

build 5 - nov/13/2020
 - python: youtube-dl 2020.11.12
 - lint cleanups

build 4 - nov/03/2020
 - python: youtube-dl 2020.11.1
 - python: pycryptodome 3.9.9

build 3 - oct/20/2020
 - configure.sh to setup and upgrade all build dependencies for windows, macos, linux
 - build.sh builds telluride binaries for windows, macos, linux
 - -a, --audio-only option flag to convert to mp3 if ffmpeg avaiable. strips video data from .webm if not
 - -m, --meta-only option flag to print JSON with meta data about video found in URL
 - Added Apache License 2.0
 - python: pip 20.2.4
 - python: youtube-dl 2020.9.20
 - python: pycryptodome 3.9.8
 - python: pyinstaller 4.0
 - python: pylint 2.6.0